# PointNeXt

./: .gitignore  install.sh  pyproject.toml
cfgs/mae/: default.yaml  pointnext-mae.yaml
examples/reconstruction/: __init__.py  trainer.py
